force-app/main/default/objects/I_ST_Scheduled_Information_Rollover__mdt/I_ST_Scheduled_Information_Rollover__mdt.object-meta.xml
<CustomObject>
    <label>Lead Information Rollover</label>
    <pluralLabel>Lead Information Rollover</pluralLabel>
</CustomObject>