force-app/main/default/objects/I_ST_Scheduled_Information_Rollover__mdt/fields/I_ST_Active__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>