force-app/main/default/objects/I_ST_Scheduled_Information_Rollover__mdt/fields/I_ST_Object__c.field-meta.xml
<CustomField>
    <fullName>I_ST_Object__c</fullName>
    <label>Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>