force-app/main/default/objects/I_ST_Scheduled_Information_Rollover__mdt/fields/I_ST_To__c.field-meta.xml
<CustomField>
    <fullName>I_ST_To__c</fullName>
    <label>To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>