force-app/main/default/objects/I_ST_Scheduled_Information_Rollover__mdt/listViews/I_ST_Information_Rollover.listView-meta.xml
<ListView>
    <fullName>I_ST_Information_Rollover</fullName>
    <columns>DeveloperName</columns>
    <columns>I_ST_Object__c</columns>
    <columns>I_ST_Field_API_Name__c</columns>
    <columns>I_ST_From__c</columns>
    <columns>I_ST_To__c</columns>
    <columns>I_ST_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>Information Rollover</label>
    <language>en_US</language>
</ListView>